--- a/templates/desktop-minimal.sh.j2
+++ b/templates/desktop-minimal.sh.j2
@@ -4,21 +4,21 @@
 # xfconf-query -c <channel> -p <property> -s <value>
 
 ## Settings for channel: xsettings
-xfconf-query -c xsettings -p /Net/ThemeName -s 'Arc'
-xfconf-query -c xsettings -p /Net/IconThemeName -s 'Numix-Circle'
-xfconf-query -c xsettings -p /Gtk/FontName -s 'Roboto 10'
+xfconf-query -c xsettings -p /Net/ThemeName -s '{{ xfconf_theme_name  }}'
+xfconf-query -c xsettings -p /Net/IconThemeName -s '{{ xfconf_icon_theme_name }}'
+xfconf-query -c xsettings -p /Gtk/FontName -s '{{ xfconf_font_name }}'
 
 ## Settings for channel: xfce4-panel
-xfconf-query -c xfce4-panel -p /panels/panel-0/position -s 'p=8;x=0;y=0'
-xfconf-query -c xfce4-panel -p /panels/panel-0/size -s '34'
-xfconf-query -c xfce4-panel -p /panels/panel-0/background-alpha -s '60'
-xfconf-query -c xfce4-panel -p /panels/panel-0/position -s 'p=8;x=0;y=0'
-#xfconf-query -c xfce4-panel -p /plugins/plugin-8/digital-format -s ''
+#xfconf-query -c xfce4-panel -p /panels/panel-0/position -s '{{ xfconf_xfce4panel_position }}'
+xfconf-query -c xfce4-panel -p /panels/panel-0/size -s '{{ xfconf_xfce4panel_size }}'
+xfconf-query -c xfce4-panel -p /panels/panel-0/background-alpha -s '{{ xfconf_xfce4panel_background_alpha }}'
+xfconf-query -c xfce4-panel -p /panels/panel-0/position -s '{{ xfconf_xfce4panel_position }}'
+xfconf-query -c xfce4-panel -p /plugins/plugin-8/digital-format -s '{{ xfconf_xfce4panel_8_digital_format }}'
 
 ## Settings for channel: xfwm3
-xfconf-query -c xfwm4 -p /general/theme -s 'Arc'
-xfconf-query -c xfwm4 -p /general/title_font -s 'Roboto bold 9'
-xfconf-query -c xfwm4 -p /general/borderless_maximize -s 'false'
+xfconf-query -c xfwm4 -p /general/theme -s '{{ xfconf_xfwm4_theme }}'
+xfconf-query -c xfwm4 -p /general/title_font -s '{{ xfconf_xfwm4_title_font }}'
+xfconf-query -c xfwm4 -p /general/borderless_maximize -s '{{ xfconf_xfwm4_borderless_maximize }}'
 
 ## Settings for channel: xfce4-desktop
-#xfconf-query -c xfce4-desktop -p /backdrop/screen0/monitor0/image-path -s '/opt/desktop-minimal/wallpaper.png'
+#xfconf-query -c xfce4-desktop -p /backdrop/screen0/monitor0/image-path -s '{{ xfconf_xfce4desktop_image_path }}'
