--- a/templates/50-desktop-minimal-lightdm.conf.j2
+++ b/templates/50-desktop-minimal-lightdm.conf.j2
@@ -1,3 +1,3 @@
 [SeatDefaults]
-allow-guest={{ ldm_allow_guest | lower }}
-greeter-hide-users={{ ldm_greeter_hide_users | lower }}
+allow-guest={{ xbc_allow_guest | lower }}
+greeter-hide-users={{ xbc_greeter_hide_users | lower }}
