--- a/templates/kioskrc.j2
+++ b/templates/kioskrc.j2
@@ -1,7 +1,7 @@
 [xfce4-session]
-CustomizeSplash={{ xfce_session_customize_splash }}
-CustomizeChooser={{ xfce_session_customize_chooser }}
-CustomizeLogout={{ xfce_session_customize_logout }}
-CustomizeCompatibility={{ xfce_session_customize_compatibility }}
-Shutdown={{ xfce_session_shutdown }}
-CustomizeSecurity={{ xfce_session_customize_security }}
+CustomizeSplash={{ xbc_kiosk_logout_splash }}
+CustomizeChooser={{ xbc_kiosk_logout_chooser }}
+CustomizeLogout={{ xbc_kiosk_logout_logout }}
+CustomizeCompatibility={{ xbc_kiosk_logout_compatibility }}
+Shutdown={{ xbc_kiosk_logout_shutdown }}
+CustomizeSecurity={{ xbc_kiosk_logout_security }}
