--- a/templates/60-autologin-lightdm.conf.j2
+++ b/templates/60-autologin-lightdm.conf.j2
@@ -1,3 +1,3 @@
 [SeatDefaults]
-autologin-user = {{ ldm_autologin_user }}
-autologin-user-timeout = 0
+autologin-user = {{ xbc_kiosk_user }}
+autologin-user-timeout = {{ xbc_kiosk_user_timeout }}
