--- a/templates/whiskermenu-defaults.rc.j2
+++ b/templates/whiskermenu-defaults.rc.j2
@@ -1,6 +1,6 @@
 favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,libreoffice-writer.desktop,libreoffice-calc.desktop,pidgin.desktop,org.gnome.Software.desktop,exo-terminal-emulator.desktop,xfhelp4.desktop
 button-title=Applications Menu
-button-icon={{ whisker_button_icon }}
+button-icon= /opt/ansible/system/startbutton/images/{{ xbc_startbutton_name }}
 show-button-title=false
 show-button-icon=true
 load-hierarchy=true
