--- a/templates/custom-desktop.sh.j2
+++ b/templates/custom-desktop.sh.j2
@@ -32,6 +32,10 @@ xfconf-query -c xfce4-desktop -p /desktop-icons/file-icons/show-removable -s '{{
 xfconf-query -c xfce4-desktop -p /desktop-icons/file-icons/show-trash -s '{{ xbc_desktop_show_trash | lower }}'
 xfconf-query -c xfce4-desktop -p /desktop-icons/icon-size -s '{{ xbc_desktop_icon_size | lower }}'
 
+## Settings for channel: xettings
+xfconf-query -c xsettings -p /Gtk/CursorThemeName -s '{{ xbc_cursor_theme_name }}'
+xfconf-query -c xsettings -p /Gtk/CursorThemeSize -s '{{ xbc_cursor_size }}'
+
 ## Settings for channel: xfce4-session (hide Suspend/Hibernate)
 xfconf-query -c xfce4-session -np '/shutdown/ShowSuspend' -t 'bool' -s '{{ xbc_kiosk_show_suspend | lower }}'
 xfconf-query -c xfce4-session -np '/shutdown/ShowHibernate' -t 'bool' -s '{{ xbc_kiosk_show_hibernate | lower }}'
